--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">SMS Gaming</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Hello beautiful world!</string>
     <string name="menu_settings">Settings</string>
 
 </resources>
